# OSS-Ticketing-System

./: .env.example  .gitignore  AGENTS.md  README.md  WORKMAP.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260208_1500_initial_schema.py  20260208_1600_auth_sessions_audit_events_triggers.py  20260208_1700_oauth_states.py  20260216_1600_ticket_saved_views.py
apps/api/app/: main.py
apps/api/app/core/: config.py  crypto.py  deps.py  http.py  metrics.py  middleware.py  otel.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  audit.py  auth.py  enums.py  identity.py  jobs.py  mail.py  oauth.py  tickets.py
apps/api/app/routers/: auth.py  health.py  mailboxes.py  me.py  ops.py  queues.py  tickets.py
apps/api/app/schemas/: auth.py  mailboxes.py  me.py  ops.py  queues.py  tickets.py
apps/api/app/services/: audit.py  mailbox_sync.py  mailboxes.py  ops_dashboard.py  queues.py  routing_simulator.py  ticket_commands.py  ticket_outbound.py  ticket_routing_admin.py  ticket_saved_views.py  ticket_views.py
apps/api/app/services/auth/: sessions.py
apps/api/app/storage/: base.py  factory.py  local.py  s3.py
apps/api/app/worker/: __main__.py  errors.py  handlers.py  queue.py  runner.py
apps/api/scripts/: smoke_api.py  validate_ticket_list_scale.py
apps/api/tests/: conftest.py  test_auth_and_org_scoping.py  test_dedupe_collision_groups.py  test_google_oauth_gmail_connector.py  test_health.py  test_mailbox_sync_engine.py  test_mailbox_sync_pause.py  test_mailbox_sync_resume.py  test_mailbox_sync_status.py  test_observability_metrics.py  test_observability_otel.py  test_ops_collision_backfill.py  test_ops_dashboard.py  test_ops_dlq_and_security.py  test_outbound_reply_api.py  test_routing_admin_crud_api.py  test_routing_simulator_and_saved_views_api.py  test_tickets_api.py  test_tickets_contract_and_query_plan.py  test_worker_history_polling.py  test_worker_occurrence_pipeline.py  test_worker_sync_circuit_breaker.py
docs/: load-testing.md  (+4 more)
(+58 files in other folders)
