[project]
name = "oss-ticketing-api"
version = "0.1.0"
description = "Enterprise OSS ticketing backend (FastAPI + Postgres) with Gmail journal ingestion."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.1",
  "bleach>=6.1.0",
  "boto3>=1.34.0",
  "cryptography>=42.0.0",
  "fastapi>=0.115.0",
  "orjson>=3.10.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]

